--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ author: "Ray Villalobos"
 description: "Generates a feed for a podcast from YAML file"
 runs: 
   using: "docker"
-  imgae: "Dockerfile"
+  image: "Dockerfile"
 branding: 
   icon: "git-branch"
   color: "red"
